--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Сокол 1</title>
+	<link
+		href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -14,9 +18,11 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
-					<img src="" alt="">
+					<img src="images/logo.png" alt="">
 				</div>
-				<a class="header__phone" href="#"></a>
+				<a class="header__phone" href="tel:84993506413">
+					8 499 350 64 13
+				</a>
 				<nav class="header__menu">
 					<ul class="header__menu-list">
 						<li class="header__menu-item">
@@ -62,7 +68,7 @@
 					<a href="#" class="section-top__btn">Перейти в каталог</a>
 				</div>
 				<div class="section-top__img">
-					<img src="" alt="">
+					<img src="images/glav/top-img.jpg" alt="">
 				</div>
 
 			</div>
@@ -76,25 +82,25 @@
 			<div class="products__inner">
 				<div class="products__items">
 					<div class="products__item">
-						<div class="products__bg"></div>
+						<div class="products__bg" style="background-image: url(images/glav/products/cabel-1.png);"></div>
 						<div class="products__item-title">
 							Кабели для систем охранно- пожарной сигнализации
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg"></div>
+						<div class="products__bg" style="background-image: url(images/glav/products/cabel-2.png);"></div>
 						<div class="products__item-title">
 							Провода телефонные, радиотрансляционные и распределительные
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg"></div>
+						<div class="products__bg" style="background-image: url(images/glav/products/cabel-3.png);"></div>
 						<div class="products__item-title">
 							Прогревочный кабели
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg"></div>
+						<div class="products__bg" style="background-image: url(images/glav/products/cabel-4.png);"></div>
 						<div class="products__item-title">
 							Кабели комбинированные
 							для видеонаблюдения
@@ -113,47 +119,54 @@
 					Специальное предложение
 				</div>
 				<div class="sale-slider__items">
-					<div class="sale-slider__item">
-						<div class="sale-slider__box">
-							<div class="sale-slider__text">
-								Распродажа складских остатков
+					<div>
+						<div class="sale-slider__item">
+							<div class="sale-slider__box">
+								<div class="sale-slider__text">
+									Распродажа складских остатков
+								</div>
+								<div class="sale-slider__title">
+									КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+								</div>
 							</div>
-							<div class="sale-slider__title">
-								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+							<div class="sale-slider__img">
+								<img src="images/glav/slide.jpg" alt="">
 							</div>
-						</div>
-						<div class="sale-slider__img">
-							<img src="" alt="">
 						</div>
 					</div>
-					<div class="sale-slider__item">
-						<div class="sale-slider__box">
-							<div class="sale-slider__text">
-								Распродажа складских остатков
+					<div>
+						<div class="sale-slider__item">
+							<div class="sale-slider__box">
+								<div class="sale-slider__text">
+									Распродажа складских остатков
+								</div>
+								<div class="sale-slider__title">
+									КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+								</div>
 							</div>
-							<div class="sale-slider__title">
-								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+							<div class="sale-slider__img">
+								<img src="images/glav/slide.jpg" alt="">
 							</div>
-						</div>
-						<div class="sale-slider__img">
-							<img src="" alt="">
 						</div>
 					</div>
-					<div class="sale-slider__item">
-						<div class="sale-slider__box">
-							<div class="sale-slider__text">
-								Распродажа складских остатков
+					<div>
+						<div class="sale-slider__item">
+							<div class="sale-slider__box">
+								<div class="sale-slider__text">
+									Распродажа складских остатков
+								</div>
+								<div class="sale-slider__title">
+									КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+								</div>
 							</div>
-							<div class="sale-slider__title">
-								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+							<div class="sale-slider__img">
+								<img src="images/glav/slide.jpg" alt="">
 							</div>
-						</div>
-						<div class="sale-slider__img">
-							<img src="" alt="">
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</section>
 
@@ -174,7 +187,7 @@
 					</p>
 				</div>
 				<div class="about__img">
-					<img src="" alt="">
+					<img src="images/glav/about.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -223,19 +236,19 @@
 			</p>
 			<div class="trust__items">
 				<div class="trust__item">
-					<img src="" alt="">
+					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="" alt="">
+					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="" alt="">
+					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="" alt="">
+					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="" alt="">
+					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -264,9 +277,138 @@
 	</section>
 
 	<footer class="footer">
-
+		<div class="container">
+			<div class="footer__inner">
+				<div class="footer__item">
+					<div class="footer__item-title">О компании</div>
+					<nav class="footer__menu">
+						<ul class="footer__menu-list">
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									История
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Новости
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Галерея
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Вакансии
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Партнеры
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__item footer__catalog">
+					<div class="footer__item-title">Каталог</div>
+					<nav class="footer__menu">
+						<ul class="footer__menu-list">
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Кабели для систем охранно- пожарной сигнализации
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Прогревочный кабели
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Провода телефонные, радиотрансляционные и распределительные
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Кабели комбинированные для видеонаблюдения
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Сертификаты
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__item footer__info">
+					<div class="footer__item-title">Информация</div>
+					<nav class="footer__menu">
+						<ul class="footer__menu-list">
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Требования к контрагентам
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Условия оплаты
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Условия хранения
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Сертификаты
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="footer__item footer__contacts">
+					<div class="footer__item-title">Контакты</div>
+					<nav class="footer__menu">
+						<ul class="footer__menu-list">
+							<li class="footer__menu-item">
+								<a href="tel:74993506413" class="footer__menu-link">
+									+7 (499)350-64-13
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="mailto:info@resurscable.com" class="footer__menu-link">
+									info@resurscable.com
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Офис: Москва г, Скульптора Мухиной ул, дом № 7, эт 1, пом II, ком 5Б
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Склад: Московская обл., Красногорский район, п. Светлые Горы, вл.29
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
+									Завод: Республика Мордовия, с.Кемля, ул.Территория Сарансккабель, д.17Г
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<a href="#" class="footer__police">Политика конфиденциальности и обработки персональных данных</a>
+		</div>
 	</footer>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
