glav desktop end

--- a/index.html
+++ b/index.html
@@ -164,6 +164,21 @@
 							</div>
 						</div>
 					</div>
+					<div>
+						<div class="sale-slider__item">
+							<div class="sale-slider__box">
+								<div class="sale-slider__text">
+									Распродажа складских остатков
+								</div>
+								<div class="sale-slider__title">
+									КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
+								</div>
+							</div>
+							<div class="sale-slider__img">
+								<img src="images/glav/slide.jpg" alt="">
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -250,6 +265,15 @@
 				<div class="trust__item">
 					<img src="images/glav/trust/1.jpg" alt="">
 				</div>
+				<div class="trust__item">
+					<img src="images/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item">
+					<img src="images/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item">
+					<img src="images/glav/trust/1.jpg" alt="">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -258,10 +282,12 @@
 		<div class="container">
 			<h4 class="title request-call__title">ЗАКАЗАТЬ ЗВОНОК</h4>
 			<div class="request-call__inner">
-				<form>
-					<input class="request-call__name" type="text" placeholder="Ваше имя">
-					<input class="request-call__phone" type="tel" placeholder="Номер телефона">
-					<button class="request-call__btn">Заказать обратный звонок</button>
+				<form class=request-call__form>
+					<div class="request-call__back">
+						<input class="request-call__name" type="text" placeholder="Ваше имя">
+						<input class="request-call__phone" type="tel" placeholder="Номер телефона">
+						<button class="request-call__btn">Заказать обратный звонок</button>
+					</div>
 					<label class="request-call__label">
 						<input class="request-call__check" type="checkbox">
 						<p class="request-call__text">
@@ -385,19 +411,19 @@
 								</a>
 							</li>
 							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">
+								<address class="footer__menu-link">
 									Офис: Москва г, Скульптора Мухиной ул, дом № 7, эт 1, пом II, ком 5Б
-								</a>
+								</address>
 							</li>
 							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">
+								<address class="footer__menu-link">
 									Склад: Московская обл., Красногорский район, п. Светлые Горы, вл.29
-								</a>
+								</address>
 							</li>
 							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">
+								<address class="footer__menu-link">
 									Завод: Республика Мордовия, с.Кемля, ул.Территория Сарансккабель, д.17Г
-								</a>
+								</address>
 							</li>
 						</ul>
 					</nav>
