--- a/about.html
+++ b/about.html
@@ -55,32 +55,32 @@
 			<div class="submenu__inner">
 				<ul class="submenu__list">
 					<li class="submenu__item">
-						<a href="#" class="submenu__link active">
+						<a href="#" class="submenu__link active" data-id="about-about">
 							о нас
 						</a>
 					</li>
 					<li class="submenu__item">
-						<a href="#" class="submenu__link ">
+						<a href="#" class="submenu__link " data-id="about-news">
 							Новости
 						</a>
 					</li>
 					<li class="submenu__item">
-						<a href="#" class="submenu__link ">
+						<a href="#" class="submenu__link " data-id="about-gallery">
 							Галерея
 						</a>
 					</li>
 					<li class="submenu__item">
-						<a href="#" class="submenu__link">
+						<a href="#" class="submenu__link" data-id="about-vacancies">
 							Вакансии
 						</a>
 					</li>
 					<li class="submenu__item">
-						<a href="#" class="submenu__link ">
+						<a href="#" class="submenu__link " data-id="about-articles">
 							статьи
 						</a>
 					</li>
 					<li class="submenu__item">
-						<a href="#" class="submenu__link">
+						<a href="#" class="submenu__link" data-id="about-partners">
 							Партнеры
 						</a>
 					</li>
@@ -89,7 +89,7 @@
 		</div>
 	</section>
 	<div class="about-tabs">
-		<section class="about-about">
+		<section id="about-about" class="about-about tab-item-about active-tab">
 			<div class="container">
 				<h4 class="title">о нас</h4>
 				<div class="about-about__inner">
@@ -116,7 +116,7 @@
 
 			</div>
 		</section>
-		<section class="about-news">
+		<section id="about-news" class="about-news tab-item-about">
 			<div class="container">
 				<h4 class="title">новости</h4>
 				<div class="about-news__inner">
@@ -124,7 +124,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-gallery">
+		<section id="about-gallery" class="about-gallery tab-item-about">
 			<div class="container">
 				<h4 class="title">Галерея</h4>
 				<div class="about-gallery__inner">
@@ -148,7 +148,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-vacancies">
+		<section id="about-vacancies" class="about-vacancies tab-item-about">
 			<div class="container">
 				<h4 class="title">вакансии</h4>
 				<div class="about-vacancies__inner">
@@ -161,7 +161,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-articles">
+		<section id="about-articles" class="about-articles tab-item-about">
 			<div class="container">
 				<h4 class="title">статьи</h4>
 				<div class="about-articles__inner">
@@ -231,7 +231,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-partners">
+		<section id="about-partners" class="about-partners tab-item-about">
 			<div class="container">
 				<h4 class="title">Партнеры</h4>
 				<div class="about-partners__inner">
