--- a/about.html
+++ b/about.html
@@ -247,9 +247,9 @@
 			<div class="request-call__inner">
 				<form class=request-call__form>
 					<div class="request-call__back">
-						<input class="request-call__name" type="text" placeholder="Ваше имя">
-						<input class="request-call__phone" type="tel" placeholder="Номер телефона">
-						<button class="request-call__btn">Заказать обратный звонок</button>
+						<input class="request-call__name" type="text" placeholder="Ваше имя" required>
+						<input class="request-call__phone" type="tel" placeholder="Номер телефона" required>
+						<button type="button" class="request-call__btn">Заказать обратный звонок</button>
 					</div>
 					<label class="request-call__label">
 						<input class="request-call__check" type="checkbox">
@@ -294,6 +294,11 @@
 							</li>
 							<li class="footer__menu-item">
 								<a href="#" class="footer__menu-link">
+									Статьи
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
 									Партнеры
 								</a>
 							</li>
@@ -322,11 +327,6 @@
 							<li class="footer__menu-item">
 								<a href="#" class="footer__menu-link">
 									Кабели комбинированные для видеонаблюдения
-								</a>
-							</li>
-							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">
-									Сертификаты
 								</a>
 							</li>
 						</ul>
