--- a/index.html
+++ b/index.html
@@ -331,6 +331,11 @@
 							</li>
 							<li class="footer__menu-item">
 								<a href="#" class="footer__menu-link">
+									Статьи
+								</a>
+							</li>
+							<li class="footer__menu-item">
+								<a href="#" class="footer__menu-link">
 									Партнеры
 								</a>
 							</li>
@@ -359,11 +364,6 @@
 							<li class="footer__menu-item">
 								<a href="#" class="footer__menu-link">
 									Кабели комбинированные для видеонаблюдения
-								</a>
-							</li>
-							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">
-									Сертификаты
 								</a>
 							</li>
 						</ul>
