Сборка сайта через гал

--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
-					<img src="images/logo.png" alt="">
+					<img src="img/logo.png" alt="">
 				</div>
 				<a class="header__phone" href="tel:84993506413">
 					8 499 350 64 13
