--- a/#src/index.html
+++ b/#src/index.html
@@ -8,8 +8,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
@@ -18,7 +17,7 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
-					<img src="images/logo.png" alt="">
+					<img src="img/logo.png" alt="">
 				</div>
 				<a class="header__phone" href="tel:84993506413">
 					8 499 350 64 13
@@ -68,7 +67,7 @@
 					<a href="#" class="section-top__btn">Перейти в каталог</a>
 				</div>
 				<div class="section-top__img">
-					<img src="images/glav/top-img.jpg" alt="">
+					<img src="img/glav/top-img.jpg" alt="">
 				</div>
 
 			</div>
@@ -82,25 +81,25 @@
 			<div class="products__inner">
 				<div class="products__items">
 					<div class="products__item">
-						<div class="products__bg" style="background-image: url(images/glav/products/cabel-1.png);"></div>
+						<div class="products__bg" style="background-image: url(img/glav/products/cabel-1.png);"></div>
 						<div class="products__item-title">
 							Кабели для систем охранно- пожарной сигнализации
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg" style="background-image: url(images/glav/products/cabel-2.png);"></div>
+						<div class="products__bg" style="background-image: url(img/glav/products/cabel-2.png);"></div>
 						<div class="products__item-title">
 							Провода телефонные, радиотрансляционные и распределительные
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg" style="background-image: url(images/glav/products/cabel-3.png);"></div>
+						<div class="products__bg" style="background-image: url(img/glav/products/cabel-3.png);"></div>
 						<div class="products__item-title">
 							Прогревочный кабели
 						</div>
 					</div>
 					<div class="products__item">
-						<div class="products__bg" style="background-image: url(images/glav/products/cabel-4.png);"></div>
+						<div class="products__bg" style="background-image: url(img/glav/products/cabel-4.png);"></div>
 						<div class="products__item-title">
 							Кабели комбинированные
 							для видеонаблюдения
@@ -130,7 +129,7 @@
 								</div>
 							</div>
 							<div class="sale-slider__img">
-								<img src="images/glav/slide.jpg" alt="">
+								<img src="img/glav/slide.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -145,7 +144,7 @@
 								</div>
 							</div>
 							<div class="sale-slider__img">
-								<img src="images/glav/slide.jpg" alt="">
+								<img src="img/glav/slide.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -160,7 +159,7 @@
 								</div>
 							</div>
 							<div class="sale-slider__img">
-								<img src="images/glav/slide.jpg" alt="">
+								<img src="img/glav/slide.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -175,7 +174,7 @@
 								</div>
 							</div>
 							<div class="sale-slider__img">
-								<img src="images/glav/slide.jpg" alt="">
+								<img src="img/glav/slide.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -202,7 +201,7 @@
 					</p>
 				</div>
 				<div class="about__img">
-					<img src="images/glav/about.jpg" alt="">
+					<img src="img/glav/about.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -251,28 +250,28 @@
 			</p>
 			<div class="trust__items">
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 				<div class="trust__item">
-					<img src="images/glav/trust/1.jpg" alt="">
+					<img src="img/glav/trust/1.jpg" alt="">
 				</div>
 			</div>
 		</div>
