--- a/#src/about.html
+++ b/#src/about.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
-					<img src="images/logo.png" alt="">
+					<img src="img/logo.png" alt="">
 				</div>
 				<a class="header__phone" href="tel:84993506413">
 					8 499 350 64 13
@@ -110,7 +110,7 @@
 							контроль качества – обеспечивают для вас соответствие изделий по ГОСТу.</p>
 					</div>
 					<div class="about-about__img">
-						<img src="images/glav/about.jpg" alt="">
+						<img src="img/glav/about.jpg" alt="">
 					</div>
 				</div>
 
@@ -130,19 +130,19 @@
 				<div class="about-gallery__inner">
 					<div class="about-gallery__items">
 						<div class="about-gallery__item">
-							<img src="images/glav/slide.jpg" alt="">
+							<img src="img/glav/slide.jpg" alt="">
 						</div>
 						<div class="about-gallery__item">
-							<img src="images/glav/slide.jpg" alt="">
+							<img src="img/glav/slide.jpg" alt="">
 						</div>
 						<div class="about-gallery__item">
-							<img src="images/glav/slide.jpg" alt="">
+							<img src="img/glav/slide.jpg" alt="">
 						</div>
 						<div class="about-gallery__item">
-							<img src="images/glav/slide.jpg" alt="">
+							<img src="img/glav/slide.jpg" alt="">
 						</div>
 						<div class="about-gallery__item">
-							<img src="images/glav/slide.jpg" alt="">
+							<img src="img/glav/slide.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -156,7 +156,7 @@
 						в данный момент у нас нет активных вакансий
 					</p>
 					<div class="about-vacancies__img">
-						<img src="images/about/vacancies.jpg" alt="">
+						<img src="img/about/vacancies.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -180,13 +180,13 @@
 							</a>
 						</div>
 						<div class="about-articles__prev-img">
-							<img src="images/about/prev-articles.jpg" alt="">
+							<img src="img/about/prev-articles.jpg" alt="">
 						</div>
 					</div>
 					<div class="about-articles__slider">
 						<div>
 							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(images/about/slide-1.png);"></div>
+								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-1.png);"></div>
 								<div class="about-articles__slide--title">
 									Таблица проводов
 								</div>
@@ -194,7 +194,7 @@
 						</div>
 						<div>
 							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(images/about/slide-2.png);"></div>
+								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
 								<div class="about-articles__slide--title">
 									Соответствие аналогов марок кабеля
 								</div>
@@ -202,7 +202,7 @@
 						</div>
 						<div>
 							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(images/about/slide-3.png);"></div>
+								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-3.png);"></div>
 								<div class="about-articles__slide--title">
 									Сечение кабеля и диаметр: в чем различие?
 								</div>
@@ -210,7 +210,7 @@
 						</div>
 						<div>
 							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(images/about/slide-4.png);"></div>
+								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-4.png);"></div>
 								<div class="about-articles__slide--title">
 									Сечение кабеля и диаметр: в чем различие?
 								</div>
@@ -218,7 +218,7 @@
 						</div>
 						<div>
 							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(images/about/slide-2.png);"></div>
+								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
 								<div class="about-articles__slide--title">
 									Соответствие аналогов марок кабеля
 								</div>
