--- a/#src/index.html
+++ b/#src/index.html
@@ -212,29 +212,44 @@
 			клиентов, которые становятся постоянными партнёрами
 		</p>
 		<div class="trust__items">
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
+			<div class="trust__items-body _swiper">
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
+				<div class="trust__item _ibg">
+					<img src="img/glav/trust/1.jpg" alt="">
+				</div>
 			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
-			</div>
-			<div class="trust__item">
-				<img src="img/glav/trust/1.jpg" alt="">
+			<div class="trust__items-navigation">
+				<div class="trust__items-arrows trust__items-arrow-prev">
+					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
+					</svg>
+				</div>
+				<div class="trust__items-dots"></div>
+				<div class="trust__items-arrows trust__items-arrow-next">
+					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
+					</svg>
+				</div>
 			</div>
 		</div>
 	</div>
