--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -157,10 +157,8 @@
 		<a href="#" class="footer__police">Политика конфиденциальности и обработки персональных данных</a>
 	</div>
 </footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/swiper-bundle.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/vendors.min.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 
 </html>
